[SPARK-37070][TEST] Pass all UTs in `mllib-local` and `mllib` with Java 17
### What changes were proposed in this pull request?
`Mockito` can't mock `j.u.Random` with Java 17 due to `module java.base does not export jdk.internal.util.random to unnamed module` and  there are some UTs in `mllib-local` and `mllib` module failed with Java 17.

So the main change of this pr is add `--add-exports=java.base/jdk.internal.util.random=ALL-UNNAMED` to `extraTestJavaArgs` to make all UTs passed in `mllib-local` and `mllib` module.

### Why are the changes needed?
Pass UT with JDK 17

### Does this PR introduce _any_ user-facing change?
No

### How was this patch tested?

- Pass the Jenkins or GitHub Action
- Manual test with Java 17

```
mvn clean install -pl mllib-local
mvn clean install -pl mllib
```

**Before**

```
Run completed in 714 milliseconds.
Total number of tests run: 96
Suites: completed 9, aborted 0
Tests: succeeded 92, failed 4, canceled 0, ignored 0, pending 0
*** 4 TESTS FAILED ***

Run completed in 10 minutes, 54 seconds.
Total number of tests run: 1639
Suites: completed 206, aborted 0
Tests: succeeded 1635, failed 4, canceled 0, ignored 7, pending 0
*** 4 TESTS FAILED ***
```

All failed UTs has similar reasons:

```
- rand *** FAILED ***
  org.mockito.exceptions.base.MockitoException: Mockito cannot mock this class: class java.util.Random.

Mockito can only mock non-private & non-final classes.
If you're not sure why you're getting this error, please report to the mailing list.

Java               : 17
JVM vendor name    : Azul Systems, Inc.
JVM vendor version : 17+35-LTS
JVM name           : OpenJDK 64-Bit Server VM
JVM version        : 17+35-LTS
JVM info           : mixed mode, sharing
OS name            : Mac OS X
OS version         : 11.4

Underlying exception : java.lang.IllegalStateException: Cannot access annotation property public abstract boolean jdk.internal.util.random.RandomSupport$RandomGeneratorProperties.isStochastic()
  at org.scalatestplus.m